# hope-control-manager

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  compose.yml  manage.py  mkdocs.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: file-filters.yml
.github/workflows/: docs.yml  label-pullrequest.yml  release.yml  test.yml
.tx/: config
docker/: Dockerfile  Makefile  README.md
docker/conf/: uwsgi.ini
docs/_scripts/: copy_logos.py  get_settings.py
docs/src/: docker.md  index.md
src/hope_control_manager/: __init__.py  apps.py  celery.py  checks.py
src/hope_control_manager/LOCALE/ar/LC_MESSAGES/: django.mo
src/hope_control_manager/LOCALE/es/LC_MESSAGES/: django.mo
src/hope_control_manager/LOCALE/fr/LC_MESSAGES/: django.mo
src/hope_control_manager/LOCALE/pt/LC_MESSAGES/: django.mo
src/hope_control_manager/admin/: __init__.py  base.py  constance.py  fi.py  flags.py  fsp.py  geo.py  user.py
src/hope_control_manager/api/: router.py  urls.py
src/hope_control_manager/api/serializers/: __init__.py  group.py  permissions.py  user.py
src/hope_control_manager/api/viewsets/: base.py  group.py  permissions.py  user.py
src/hope_control_manager/config/: __init__.py  logging_conf.py  settings.py  urls.py  wsgi.py
src/hope_control_manager/config/fragments/: app.py  celery.py  constance.py  flags.py  rest_framework.py  sentry.py  social_auth.py  streaming.py  tailwind.py  unfold.py
src/hope_control_manager/management/commands/: develop.py  load.py  upgrade.py
src/hope_control_manager/migrations/: 0001_initial.py  0002_exchangerate_financialinstitution_and_more.py
src/hope_control_manager/models/: __init__.py  base.py  fi.py  fsp.py  geo.py  office.py  rates.py  user.py
src/hope_control_manager/modules/security/: apps.py  backends.py
src/hope_control_manager/ui/templates/pages/: index.html
src/hope_control_manager/ui/templates/rest_framework/: base.html
src/hope_control_manager/ui/templates/unfold/helpers/: site_branding.html  userlinks.html
src/hope_control_manager/ui/templates/unfold/layouts/: base.html  base_simple.html  skeleton.html  unauthenticated.html
src/hope_control_manager/ui/theme/: apps.py
src/hope_control_manager/ui/theme/static/css/: styles.css
src/hope_control_manager/ui/theme/static_src/: package-lock.json
src/hope_control_manager/ui/theme/static_src/src/: styles.scss
src/hope_control_manager/ui/views/: __init__.py  error_pages.py  site.py
src/hope_control_manager/utils/: constance.py  language.py  loaders.py
tests/: .coveragerc  conftest.py
tests/api/: test_api_group.py
tests/extras/testutils/factories/: __init__.py  auth.py  fi.py  fsp.py  geo.py  social.py
tests/utils/: test_language.py
